Fix search bar overflow on small devices

--- a/web/css/_activity_list.sass
+++ b/web/css/_activity_list.sass
@@ -27,8 +27,9 @@
 
     +center()
     padding: 10px
-
-    width: 100%
+    width: -webkit-calc(100% - 20px)
+    width: -moz-calc(100% - 20px)
+    width: calc(100% - 20px)
     max-width: #{ $maxw }
 
     font-size: 1.25em
